--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
@@ -20,6 +21,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "dotenv": "^16.4.1"
   }
 }
