--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.7",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
